a bunch of changes & additions
create Article entities, DTOs, Repository, Services and Controller